--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   dio: ^5.0.3
 
   # state management
-  provider: ^6.0.5
+  get: ^4.6.5
 
   # see if has internet or not
   connectivity_plus: ^3.0.3
